--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
   <div class="container">
     <h1>Reserva tu cita</h1>
     <form id="form-cita">
-      <input type="text" id="nombre" placeholder="A nombre de..." required>
-      <input type="tel" id="telefono" placeholder="Teléfono" required pattern="[0-9]{9}">
-      <input type="date" id="fecha" required>
-      <input type="time" id="hora" required>
+      <input type="text" id="nombre" name="nombre" placeholder="A nombre de..." required />
+      <input type="tel" id="telefono" name="telefono" placeholder="Teléfono" required pattern="[0-9]{9}" />
+      <input type="date" id="fecha" name="fecha" required />
+      <input type="time" id="hora" name="hora" required />
       <button type="submit">Reservar</button>
     </form>
     <div id="mensaje" class="mensaje"></div>
@@ -21,33 +21,27 @@
   <script>
   const form = document.getElementById("form-cita");
 
-form.addEventListener("submit", (e) => {
-  e.preventDefault();
-  const formData = new FormData(form);
+  form.addEventListener("submit", (e) => {
+    e.preventDefault();
+    const formData = new FormData(form);
 
-  fetch("https://script.google.com/macros/s/AKfycb.../exec", {
-    method: "POST",
-    body: formData
-  })
-    .then(response => {
-      if (response.ok) {
-        alert("✅ ¡Reserva enviada correctamente!");
-        form.reset();
-      } else {
-        alert("❌ Hubo un error al enviar la reserva.");
-      }
+    fetch("https://script.google.com/macros/s/AKfycb.../exec", {
+      method: "POST",
+      body: formData
     })
-    .catch(error => {
-      alert("❌ Error de conexión.");
-      console.error(error);
-    });
-});
-
-form.addEventListener("submit", (e) => {
-  e.preventDefault();
-  console.log("Evento submit detectado");
-  alert("Formulario enviado. Ahora debería enviarse la reserva.");
-});
+      .then(response => {
+        if (response.ok) {
+          alert("✅ ¡Reserva enviada correctamente!");
+          form.reset();
+        } else {
+          alert("❌ Hubo un error al enviar la reserva.");
+        }
+      })
+      .catch(error => {
+        alert("❌ Error de conexión.");
+        console.error(error);
+      });
+  });
 
   </script>
 
