--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ form.addEventListener("submit", (e) => {
   
   const formData = new FormData(form);
 
-  fetch("https://script.google.com/macros/s/AKfyc.../exec", {
+  fetch("https://script.google.com/macros/s/AKfycbz0j4D4wof5-KFoMBfqEmtN-If_i44vo1ObX3pau9BA08Pqzxw32tEuPJzY3jtEgkPS8Q/exec", {
     method: "POST",
     body: formData
   })
